Fix deployment issues: add page title, fix CORS deps, improve error handling

--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>Smart Dustbin Monitor - SIH Project</title>
+    <meta name="description" content="Real-time smart dustbin monitoring system with live data visualization and alerts" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
